--- a/public/food.css
+++ b/public/food.css
@@ -2,9 +2,11 @@ body, html {
     height: 100%;
     margin: 0px;
     padding: 0px;
+    font-family: 'Montaga', serif;
+    color: #3E4551;
 }
 .bg1 { 
-    background-image: url("salt.jpg");
+    background-image: url("salt2.jpg");
     height: 100%; 
 
     /* Center and scale the image nicely */
@@ -12,25 +14,23 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
 } 
-.hc-gradient {
+.social1-gradient {
 	border-radius: 50%;
 	padding: 13px 15px;
 	color: #fff !important;
 	text-align: center;
-    background: -webkit-linear-gradient(45deg, rgb(83, 125, 210), rgb(178, 30, 123) 100%);
-    background: -webkit-gradient(linear, 45deg, from(rgb(29, 236, 197)), to(rgb(96, 0, 136)));
-    background: linear-gradient(to 45deg, rgb(29, 236, 197), rgb(96, 0, 136) 100%); 
-    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+    background: -webkit-linear-gradient(45deg, #f8bbd0, #7283a7 100%);
+    background: -webkit-gradient(linear, 45deg, from(#f8bbd0), to(#7283a7));
+    background: linear-gradient(to 45deg, #f8bbd0, #7283a7 100%);  
+    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
 } 
-.hm-gradient {
-	border-radius: 50%;
+.social2-gradient {
+	border-radius: 100px;
 	padding: 13px 15px;
 	color: #fff !important;
 	text-align: center;
-    background: -webkit-linear-gradient(45deg, rgb(108, 155, 193),rgb(249, 159, 221) 100%);
-    background: -webkit-gradient(linear, 45deg, from(rgb(29, 236, 197)), to(rgb(96, 0, 136)));
-    background: linear-gradient(to 45deg, rgb(29, 236, 197), rgb(96, 0, 136) 100%); 
-    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+    background: rgba(144, 164, 174, 0.9);
+    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.6);
 } 
 .title1 {
 	color: #fff;
@@ -49,6 +49,9 @@ body, html {
 .click-dish {
     width: 200px;
 }
+.clock {
+    width: 120px;
+}
 @media (max-width: 500px) {
     .title1 {
         font-size: 50px;
@@ -58,6 +61,9 @@ body, html {
     }
     .click-dish {
         width: 100px;
+    }
+    .clock {
+        width: 80px;
     }
 }
 @media (min-height: 800px) {
@@ -81,10 +87,16 @@ body, html {
         }
 }
 
+/*----------End Part 1----------*/
+
+
+
+/*----------Start Part 2----------*/
 
 .tablink {
     background-color: #fff;
-    color: #000;
+    color: #3E4551;
+    font-family: 'Montaga', serif; 
     float: left;
     border: none;
     outline: none;
@@ -93,12 +105,9 @@ body, html {
     font-size: 17px;
     width: 25%;
 }
-
 .tablink:hover {
-    background-color: #777;
+    background-color: #b0bec5;
 }
-
-/* Style the tab content (and add height:100% for full page content) */
 .tabcontent {
     color: white;
     display: none;
@@ -106,59 +115,85 @@ body, html {
     height: 100%;
      background-size: cover;
 }
-#Home {background-color: rgb(249, 159, 221);}
-#News {background-color: rgb(249, 159, 221);}
-#Contact {background-color: rgb(249, 159, 221);}
-#About {background-color: rgb(249, 159, 221);}
 
+/*----------Tab End----------*/
 
-
-
-
-.between-txt {
-	margin: 1px 1px;
-	font-size: 25px;
-	font-family: 'Montaga', serif;
-	font-family: 'Flamenco', cursive;
-	height: 100%;
+.section-title {
+    color: #3E4551;
+    margin-bottom: 50px;
+    font-family: 'Montaga', serif;    
 }
-.bg2 { 
-    background-image: url("https://pixabay.com/get/eb35b7072af5063ed1534705fb09439ee77fe3d111ac104497f8c17aaeefb4b9/food-2068217_1920.jpg");
-    height: 100%; 
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+.bg-starter { 
 }
-.bg3 { 
-    background-image: url("salt.jpg");
-    height: 100%; 
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-} 
-
-
-.bg4 { 
-    background-image: url("berry.jpg");
-    height: 100%; 
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-} 
+.post-outer {
+    margin-bottom: 40px;
+    color:#78909c;
+    background-color: #fff;
+    border: 1px solid #b0bec5;
+    padding: 3px;
+    padding-bottom: 0px;
+    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
+}
+.post {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+.post-img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+.post-title {
+    padding-top: 10px;
+    font-family: 'Fredericka the Great', cursive;
+}
+.like-share {
+    background-color: #b0bec5;
+    padding: 10px;
+    margin: 0px -3px;
+}
+.left-side {
+    width: 75%;
+    float: left;
+    padding: 20px;
+}
+.right-side {
+    float: right;
+    width: 25%;
+    color: #3E4551;
+    margin-top: 100px;
+    padding: 20px;
+    text-align: right;
+}
+@media (max-width: 700px) {
+    .left-side {
+        width: 100%;
+    }
+    .right-side {
+        display: none;
+    }
+}
 
 
 .bg5 { 
-    background-image: url("salt.jpg");
-    height: 100%; 
-
-    /* Center and scale the image nicely */
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    color: #3E4551;
+    text-align: center;
+    padding: 20px;
 } 
+
+.foot {
+    color: #607d8b;
+}
+.social3-gradient {
+    border-radius: 50%;
+    padding: 13px 20px;
+    color: #fff !important;
+    text-align: center;
+    background: rgba(144, 164, 174, 0.9);
+    margin-right: 15px;
+    font-size: 20px;
+} 
+
+  
+
