--- a/public/food.css
+++ b/public/food.css
@@ -6,7 +6,7 @@ body, html {
     color: #3E4551;
 }
 .bg1 { 
-    background-image: url("salt2.jpg");
+    background-image: url("berry.jpg");
     height: 100%; 
 
     /* Center and scale the image nicely */
