--- a/public/food.css
+++ b/public/food.css
@@ -62,6 +62,14 @@ body, html {
         width: 80px;
     }
 }
+@media (max-width: 350px) {
+    .title1 {
+        font-size: 40px;
+    }
+    .award {
+        width: 100px;
+    }
+}
 @media (min-height: 800px) {
     .title1 {
         margin-top: 80px;
@@ -163,15 +171,22 @@ body, html {
     padding: 20px;
     text-align: right;
 }
-@media (max-width: 700px) {
+@media (max-width: 1100px) {
     .left-side {
         width: 100%;
+        float: none;
     }
     .right-side {
-        display: none;
+        float: right;
+        width: 50%;
+        margin-top: 20px;
     }
 }
-
+@media (max-width: 600px) {
+    .right-side {
+        width: 100%;
+    }
+}
 
 .bg5 { 
     color: #3E4551;
